# NBodySimulation

./: README.md  main.py  pyproject.toml
utils/: body.py  color.py  constants.py  plot.py  render.py
