[tool.poetry]
name = "randomthreebody"
version = "0.1.0"
description = ""
authors = ["Sidharth Rao <sidharthmrao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
